@@ -104,6 +104,7 @@
    20440 WCSNLEN
    20450 WSTRNCMP
    20460 MEMMEM
+   20470 WMEMCMP
 */
 
 #if defined(VGO_solaris)
@@ -2262,6 +2263,26 @@ static inline void my_exit ( int x )
 #if defined(VGO_freebsd)
  WMEMCHR(VG_Z_LIBC_SONAME, wmemchr)
 #endif
+
+
+#define WMEMCMP(soname, fnname) \
+   int VG_REPLACE_FUNCTION_EZU(20470,soname,fnname)       \
+          ( const Int *b1, const Int *b2, SizeT n ); \
+   int VG_REPLACE_FUNCTION_EZU(20470,soname,fnname)       \
+          ( const Int *b1, const Int *b2, SizeT n )  \
+   { \
+      for (SizeT i = 0U; i < n; ++i) { \
+         if (b1[i] != b2[i]) \
+            return b1[i] > b2[i] ? 1 : -1; \
+      } \
+      return 0; \
+   }
+
+#if defined(VGO_linux)
+ WMEMCMP(VG_Z_LIBC_SONAME, wmemcmp)
+#endif
+
+
 /*------------------------------------------------------------*/
 /*--- Improve definedness checking of process environment  ---*/
 /*------------------------------------------------------------*/
